# OOP_IDZ2

./: CMakeLists.txt  LOGIKA16.cpp  LOGIKA16.h  OutPrinter.cpp  OutPrinter.h  README.md  TermianlUserInterface.cpp  TermianlUserInterface.h  const.h  main.cpp  util.cpp  util.h
generator/: main.cpp
